cluster/apps/photoprism/photoprism/photoprism-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism-db
  namespace: photoprism
spec:
  ports:
    - name: photoprism-db
      port: 3306
      protocol: TCP
  selector:
    app.kubernetes.io/instance: photoprism-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: photoprism-db
  name: photoprism-db
  namespace: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: photoprism-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: photoprism-db
    spec:
      restartPolicy: Always
      containers:
        - name: photoprism-db
          image: mariadb:jammy
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
              name: photoprism-db
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: photoprism-db-vol
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 1Gi
      volumes:
        - name: photoprism-db-vol
          persistentVolumeClaim:
            claimName: photoprism-db-pvc
