cluster/apps/photoprism/photoprism/photoprism.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoprism
  namespace: photoprism
  labels:
    app.kubernetes.io/instance: photoprism
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: photoprism
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: photoprism
    spec:
      restartPolicy: Always
      containers:
        - name: photoprism
          image: photoprism/photoprism:20220121
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /assets/photos/originals
              name: originals
            - mountPath: /assets/storage
              name: photoprism
              subPath: storage
            - mountPath: /assets/photos/import
              name: photoprism
              subPath: import
            - mountPath: /assets/photos/export
              name: photoprism
              subPath: export
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: photoprism-originals
        - name: photoprism
          persistentVolumeClaim:
            claimName: photoprism-storage
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 1
              preference:
                matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - amd64
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
  namespace: photoprism
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: photoprism
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: photoprism
  namespace: photoprism
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`photos.${SECRET_DOMAIN}`) && PathPrefix(`/`)"
      middlewares:
        - name: security-header
          namespace: networking
      services:
        - kind: Service
          name: photoprism
          namespace: photoprism
          port: 80
          scheme: http
  tls:
    secretName: "${SECRET_DOMAIN}-tls"
